Bug 67737 - FILEOPEN: DOCX shape with mirroring not mirrored in LO
Summary: FILEOPEN: DOCX shape with mirroring not mirrored in LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-04 09:41 UTC by Adam CloudOn
Modified: 2013-12-29 21:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
DOCX containing vertically flipped arrow (20.85 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-08-04 09:41 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-08-04 09:41:43 UTC
Created attachment 83606 [details]
DOCX containing vertically flipped arrow

Problem description: 
When opening a shape that is 'flipped' on an X or Y axis - it does not appear flipped in LO.

Steps to reproduce:
1. Open the attached DOCX
2. LO doesn't show it as flipped

Current behavior:
LO doesn't show the shape as flipped vertically

Expected behavior:
LO should show the shape as flipped vertically
              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Commit Notification 2013-08-22 15:13:40 UTC
Ri GangHu committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d3ffe3ed3fa1b80c7e54439673029e105940db80

fdo#67737 : fix for flip not being imported & rendered correctly



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Jorendc 2013-12-29 21:15:59 UTC
Looks fixed to me.

Tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 5be7ec4193b892e5643ff5f3f2e6755319569190
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-27_23:55:02

Verified by opening same document in MS Word 2010.

In both Word as Writer the arrow is pointing to the right.