fdo#67737 : fix for flip not being imported and rendered correctly

Change-Id: I5c8440edad0381e33b64f64bb54aa8f1bc304007